<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background_gradient"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pollVoteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/vote"
        android:textAllCaps="true"
        android:textColor="@color/light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/pollVoteCardA"
        app:layout_constraintStart_toStartOf="@id/pollVoteCardA"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pollVoteCardA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="52dp"
        app:cardBackgroundColor="@color/backgroundGradientDark"
        app:cardCornerRadius="@dimen/home_card_radius"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toStartOf="@id/pollVoteCardB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pollVoteTextView">

        <ImageView
            android:id="@+id/pollAImageView"
            android:layout_width="160dp"
            android:layout_height="300dp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pollVoteCardB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/backgroundGradientDark"
        app:cardCornerRadius="@dimen/home_card_radius"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pollVoteCardA"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/pollBImageView"
            android:layout_width="160dp"
            android:layout_height="300dp" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/pollNowTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/now"
        android:textAllCaps="true"
        android:textColor="@color/light"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/pollVoteCardB"
        app:layout_constraintStart_toStartOf="@id/pollVoteCardB"
        app:layout_constraintTop_toBottomOf="@id/pollVoteCardB" />

    <TextView
        android:id="@+id/pollVSTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/vs"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/pollVoteCardA"
        app:layout_constraintEnd_toEndOf="@id/pollVoteCardB"
        app:layout_constraintStart_toStartOf="@id/pollVoteCardA"
        app:layout_constraintTop_toTopOf="@id/pollVoteCardB" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/activatePollCard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/light"
        app:cardCornerRadius="@dimen/wall_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pollVoteCardA">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/activate_poll"
            android:textColor="@color/backgroundGradientDark"
            android:textSize="16sp" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>